# app/Http/Controllers/TechnicalController.php
@@ -1,12 +1,11 @@
 <?php
-
 namespace App\Http\Controllers;
 
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
 use Illuminate\Support\Str;
 use OpenApi\Attributes as OA;
-
+use Illuminate\Support\Facades\Auth;
 
 #[OA\Info(
     version: '1.0.0',
@@ -17,7 +16,7 @@ class TechnicalController extends Controller
     #[OA\Get(
         path: '/api/technical/basic',
         summary: 'basic get endpoint returns test data',
-        responses:[
+        responses: [
             new OA\Response(
                 response: 200,
                 description: 'Success',
@@ -47,6 +46,53 @@ class TechnicalController extends Controller
                 'number'=>rand(1,100),
                 'string'=>Str::random(10),
                 'uuid'=>Str::uuid()
+            ]
+        ]);
+    }
+
+    #[OA\Get(
+        path: '/api/technical/auth-test',
+        summary: 'Endpoint to test authentication',
+        security: [['sanctum' => []]],
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'Successfully authenticated',
+                content: new OA\JsonContent(
+                    properties: [
+                        new OA\Property(property: 'message', type: 'string'),
+                        new OA\Property(property: 'user_info', properties: [
+                            new OA\Property(property: 'id', type: 'integer'),
+                            new OA\Property(property: 'email', type: 'string'),
+                            new OA\Property(property: 'role', type: 'string'),
+                            new OA\Property(property: 'last_name', type: 'string'),
+                            new OA\Property(property: 'full_name', type: 'string')
+                        ], type: 'object')
+                    ]
+                )
+            ),
+            new OA\Response(
+                response: 401,
+                description: 'Unauthenticated',
+                content: new OA\JsonContent(
+                    properties: [
+                        new OA\Property(property: 'message', type: 'string', example: 'Unauthenticated.')
+                    ]
+                )
+            )
+        ]
+    )]
+    public function testAuth(Request $request) {
+        $user = Auth::user();
+
+        return response()->json([
+            'message' => 'Authentication successful',
+            'user_info' => [
+                'id' => $user->id,
+                'email' => $user->email,
+                'role' => $user->role,
+                'last_name' => $user->last_name,
+                'full_name' => $user->full_name
             ]
         ]);
     }
