# routes/api.php
@@ -1,47 +1,65 @@
-<?php // routes/api.php
+<?php
 
-use App\Http\Controllers\TechnicalController;
-use App\Http\Controllers\MemberController;
-use App\Http\Controllers\ProfileController;
-use App\Http\Controllers\FileController;
+use App\Http\Controllers\EventController;
+use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\MemberController;
 
-Route::get('/technical/basic', [TechnicalController::class, 'getBasic']);
+/*
+|--------------------------------------------------------------------------
+| API Routes
+|--------------------------------------------------------------------------
+|
+| Here is where you can register API routes for your application. These
+| routes are loaded by the RouteServiceProvider and all of them will
+| be assigned to the "api" middleware group. Make something great!
+|
+*/
 
+// Public routes
+Route::get('/members/all', [MemberController::class, 'getAllPublicMembers']);
+
+// Member routes
 Route::prefix('/member')->group(function () {
+    // Public member routes
     Route::post('/register', [MemberController::class, 'registerMember']);
-    Route::post('/activate/{id}', [MemberController::class, 'activateAccount']);
-
+    Route::post('/activate/{code}', [MemberController::class, 'activateAccount']);
     Route::post('/login', [MemberController::class, 'loginMember']);
-    Route::middleware('auth:sanctum')->post('/profile-picture', [MemberController::class, 'uploadProfilePicture']);
+    Route::post('/request-password-reset', [MemberController::class, 'requestPasswordReset']);
+    Route::post('/reset-password', [MemberController::class, 'resetPassword']);
+
+    // Protected member routes
     Route::middleware('auth:sanctum')->group(function () {
-        Route::post('/edit', [MemberController::class, 'editMember']);
+        Route::post('/profile-picture', [MemberController::class, 'uploadProfilePicture']);
+        Route::put('/edit', [MemberController::class, 'editMember']);
         Route::post('/deactivate', [MemberController::class, 'deactivateOwnAccount']);
-
-        // Profile photo endpoints
-        Route::post('/profile/upload-photo', [ProfileController::class, 'uploadProfilePhoto']);
-
-        Route::middleware('role:role_admin')->group(function () {
-            Route::post('/create', [MemberController::class, 'createMember']);
-            Route::post('/{id}/deactivate', [MemberController::class, 'deactivateAccount']);
-            Route::post('/{id}/delete', [MemberController::class, 'deleteMember']);
-            Route::post('/{id}/activate', [MemberController::class, 'activateMember']);
-            Route::post('/{id}/changerole', [MemberController::class, 'changeRole']);
-            Route::put('/{id}/visibility', [MemberController::class, 'changeVisibility']);
-            Route::put('/{id}/position', [MemberController::class, 'updatePosition']);
-        });
     });
 });
 
-// File endpoints
-Route::prefix('/files')->group(function () {
-    Route::middleware('auth:sanctum')->group(function () {
-        Route::post('/upload', [FileController::class, 'upload']);
-    });
-
-    // Public access to download files
-    Route::get('/{id}', [FileController::class, 'download']);
+// Admin routes
+Route::prefix('admin/member')->middleware('auth:sanctum')->group(function () {
+    Route::post('/create', [MemberController::class, 'createMember']);
+    Route::post('/{id}/deactivate', [MemberController::class, 'deactivateAccount']);
+    Route::put('/{id}/role', [MemberController::class, 'changeRole']);
+    Route::put('/{id}/visibility', [MemberController::class, 'changeVisibility']);
+    Route::put('/{id}/position', [MemberController::class, 'updatePosition']);
+    Route::put('/{id}/edit', [MemberController::class, 'adminEditMember']);
 });
 
-// Public access to profile photos
-Route::get('/profile/photo/{id}', [ProfileController::class, 'getProfilePhoto']);
+
+Route::get('/events', [EventController::class, 'index']);
+Route::get('/events/{path}', [EventController::class, 'show']);
+
+// Protected event routes
+Route::middleware('auth:sanctum')->group(function () {
+    Route::post('/events', [EventController::class, 'store']);
+    Route::put('/events/{id}', [EventController::class, 'update']);
+    Route::delete('/events/{id}', [EventController::class, 'destroy']);
+});
+
+// Admin event routes
+Route::prefix('admin/events')->middleware('auth:sanctum')->group(function () {
+    Route::get('/', [EventController::class, 'adminIndex']);
+    Route::get('/{id}', [EventController::class, 'adminShow']);
+    Route::put('/{id}/visibility', [EventController::class, 'updateVisibility']);
+});
